2018-04-10  Danilo Chang

    * Implement opusfile command
    * Initial version
