@@ -1,3 +1,7 @@
+2018-04-11  Danilo Chang
+
+    * Add sub-command getTags
+
 2018-04-10  Danilo Chang
 
     * Implement opusfile command
